@@ -922,3 +922,9 @@ body, html {
   height: auto !important;
   viewportMargin: Infinity !important;
 }
+
+.code-mirror-container {
+  .panel-body {
+    padding: 0px;
+  }
+}
